--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,5 @@
+wtforms
+flask_wtf
 Flask==1.1.2
 threatresponse==0.10.0
 git+https://github.com/CiscoSecurity/tr-05-ctim-bundle-builder.git@develop#
