--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,4 @@
+Flask==1.1.2
+Flask-WTF==0.14.3
 threatresponse==0.10.0
 git+https://github.com/CiscoSecurity/tr-05-ctim-bundle-builder.git@develop#
