--- a/code/requirements.txt
+++ b/code/requirements.txt
@@ -4,3 +4,4 @@ threatresponse==0.10.0
 git+https://github.com/CiscoSecurity/tr-05-ctim-bundle-builder.git@develop#
 pytest==6.2.2
 flake8==3.9.0
+coverage==5.5
