--- a/.github/workflows/dockerhub-latest.yml
+++ b/.github/workflows/dockerhub-latest.yml
@@ -29,9 +29,7 @@ jobs:
           password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
       - name: Set up Docker Buildx
         id: buildx
-        uses: ./
-        with:
-          version: latest
+        uses: docker/setup-buildx-action@v1
       - name: Build and push
         id: docker_build
         uses: docker/build-push-action@v2
