--- a/.github/workflows/dockerhub-latest.yml
+++ b/.github/workflows/dockerhub-latest.yml
@@ -30,6 +30,8 @@ jobs:
       - name: Set up Docker Buildx
         id: buildx
         uses: docker/setup-buildx-action@v1
+        with:
+          version: latest
       - name: Build and push
         id: docker_build
         uses: docker/build-push-action@v2
