--- a/.github/workflows/dockerhub-latest.yml
+++ b/.github/workflows/dockerhub-latest.yml
@@ -31,12 +31,13 @@ jobs:
         id: buildx
         uses: docker/setup-buildx-action@v1
         with:
-          version: latest
+          # workaround copied from https://github.com/oam-dev/kubevela/pull/2120
+          driver-opts: image=moby/buildkit:master
       - name: Build and push
         id: docker_build
         uses: docker/build-push-action@v2
         with:
           push: true
-          tags:  ciscosecurity/tr-05-ctim-stix-translator:ci-github
+          tags: ciscosecurity/tr-05-ctim-stix-translator:ci-github
       - name: Image digest
         run: echo ${{ steps.docker_build.outputs.digest }}
