--- a/.github/workflows/dockerhub-latest.yml
+++ b/.github/workflows/dockerhub-latest.yml
@@ -31,8 +31,7 @@ jobs:
         id: buildx
         uses: docker/setup-buildx-action@v1
         with:
-          # workaround copied from https://github.com/oam-dev/kubevela/pull/2120
-          driver-opts: image=moby/buildkit:master
+          version: latest
       - name: Build and push
         id: docker_build
         uses: docker/build-push-action@v2
