--- a/.github/workflows/dockerhub-latest.yml
+++ b/.github/workflows/dockerhub-latest.yml
@@ -32,6 +32,7 @@ jobs:
         uses: docker/setup-buildx-action@v1
         with:
           version: latest
+          buildkitd-flags: --debug
       - name: Build and push
         id: docker_build
         uses: docker/build-push-action@v2
