--- a/.github/workflows/dockerhub-latest.yml
+++ b/.github/workflows/dockerhub-latest.yml
@@ -33,7 +33,8 @@ jobs:
         uses: docker/login-action@v1
         with:
           username: ${{ secrets.DOCKER_HUB_USERNAME }}
-          password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
+          #${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
+          password: try
       - name: Build and push
         id: docker_build
         uses: docker/build-push-action@v2
