--- a/.github/workflows/dockerhub-latest.yml
+++ b/.github/workflows/dockerhub-latest.yml
@@ -6,9 +6,9 @@ name: CI to Docker HUB
 on:
   # Triggers the workflow on push or pull request events but only for the develop branch
   push:
-    branches: [ develop ]
+    branches: [ ci-github ]
   pull_request:
-    branches: [ develop ]
+    branches: [ ci-github ]
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
